{
  "version": 4,
  "terraform_version": "1.7.5",
  "serial": 15,
  "lineage": "fcc365b8-88d1-ae9b-9efd-87f7a9924192",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ansible",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08602ac2d592c8c31",
            "arn": "arn:aws:ec2:af-south-1:466021236912:instance/i-0a270d5ab27016317",
            "associate_public_ip_address": true,
            "availability_zone": "af-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a270d5ab27016317",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "gladman-new",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06f6156798e696ce2",
            "private_dns": "ip-10-1-1-108.af-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.108",
            "public_ip": "13.246.35.184",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:af-south-1:466021236912:key/096a26cb-68ac-419e-af54-6db61c4d108e",
                "throughput": 0,
                "volume_id": "vol-0d072e3285dc863e0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f7dbaff3672b4252",
            "tags": {
              "Createdby": "gladmanchikosha",
              "Name": "GC-ansible",
              "Schedule": "no-schedule"
            },
            "tags_all": {
              "Createdby": "gladmanchikosha",
              "Name": "GC-ansible",
              "Schedule": "no-schedule"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08922e886b47b7ad7"
            ]
          },
          "dependencies": [
            "aws_security_group.demo-sg",
            "aws_subnet.Nam-public-subnet-01",
            "aws_vpc.Nam-vpc"
          ]
        },
        {
          "index_key": "jenikns-slave",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08602ac2d592c8c31",
            "arn": "arn:aws:ec2:af-south-1:466021236912:instance/i-0c8f12a935f51c1ff",
            "associate_public_ip_address": true,
            "availability_zone": "af-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c8f12a935f51c1ff",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "gladman-new",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0c8715ae8adf13a97",
            "private_dns": "ip-10-1-1-190.af-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.190",
            "public_ip": "13.244.64.7",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:af-south-1:466021236912:key/096a26cb-68ac-419e-af54-6db61c4d108e",
                "throughput": 0,
                "volume_id": "vol-06dac9339f35181f1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f7dbaff3672b4252",
            "tags": {
              "Createdby": "gladmanchikosha",
              "Name": "GC-jenikns-slave",
              "Schedule": "no-schedule"
            },
            "tags_all": {
              "Createdby": "gladmanchikosha",
              "Name": "GC-jenikns-slave",
              "Schedule": "no-schedule"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08922e886b47b7ad7"
            ]
          },
          "dependencies": [
            "aws_security_group.demo-sg",
            "aws_subnet.Nam-public-subnet-01",
            "aws_vpc.Nam-vpc"
          ]
        },
        {
          "index_key": "jenkins-master",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-08602ac2d592c8c31",
            "arn": "arn:aws:ec2:af-south-1:466021236912:instance/i-06928828d7970a01d",
            "associate_public_ip_address": true,
            "availability_zone": "af-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": true,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06928828d7970a01d",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.medium",
            "ipv6_address_count": 0,
            "key_name": "gladman-new",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03b2e92ce7ea736ab",
            "private_dns": "ip-10-1-1-117.af-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.117",
            "public_ip": "13.244.157.251",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:af-south-1:466021236912:key/096a26cb-68ac-419e-af54-6db61c4d108e",
                "throughput": 0,
                "volume_id": "vol-0a43b82e81639380b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f7dbaff3672b4252",
            "tags": {
              "Createdby": "gladmanchikosha",
              "Name": "GC-jenkins-master",
              "Schedule": "no-schedule"
            },
            "tags_all": {
              "Createdby": "gladmanchikosha",
              "Name": "GC-jenkins-master",
              "Schedule": "no-schedule"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-08922e886b47b7ad7"
            ]
          },
          "dependencies": [
            "aws_security_group.demo-sg",
            "aws_subnet.Nam-public-subnet-01",
            "aws_vpc.Nam-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Nam-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:466021236912:internet-gateway/igw-09e8106eff898445c",
            "id": "igw-09e8106eff898445c",
            "owner_id": "466021236912",
            "tags": {
              "Name": "Nam-igw"
            },
            "tags_all": {
              "Name": "Nam-igw"
            },
            "vpc_id": "vpc-0b9143e64c0509563"
          },
          "dependencies": [
            "aws_vpc.Nam-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "Nam-public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:466021236912:route-table/rtb-00223f6fbd8eb4bb8",
            "id": "rtb-00223f6fbd8eb4bb8",
            "owner_id": "466021236912",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09e8106eff898445c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b9143e64c0509563"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.Nam-igw",
            "aws_vpc.Nam-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Nam-rta-public-subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acd3c372fbb9d105",
            "route_table_id": "rtb-00223f6fbd8eb4bb8",
            "subnet_id": "subnet-0f7dbaff3672b4252"
          },
          "dependencies": [
            "aws_internet_gateway.Nam-igw",
            "aws_route_table.Nam-public-rt",
            "aws_subnet.Nam-public-subnet-01",
            "aws_vpc.Nam-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "Nam-rta-public-subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0286a5452231de3ad",
            "route_table_id": "rtb-00223f6fbd8eb4bb8",
            "subnet_id": "subnet-09882a3a1181a2bba"
          },
          "dependencies": [
            "aws_internet_gateway.Nam-igw",
            "aws_route_table.Nam-public-rt",
            "aws_subnet.Nam-public-subnet-02",
            "aws_vpc.Nam-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "demo-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:466021236912:security-group/sg-08922e886b47b7ad7",
            "description": "SSH Access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08922e886b47b7ad7",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Jenkins-port",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Shh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "demo-sg",
            "name_prefix": "",
            "owner_id": "466021236912",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh-port"
            },
            "tags_all": {
              "Name": "ssh-port"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b9143e64c0509563"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Nam-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Nam-public-subnet-01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:466021236912:subnet/subnet-0f7dbaff3672b4252",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1a",
            "availability_zone_id": "afs1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f7dbaff3672b4252",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "466021236912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Nam-public-subent-01"
            },
            "tags_all": {
              "Name": "Nam-public-subent-01"
            },
            "vpc_id": "vpc-0b9143e64c0509563"
          },
          "dependencies": [
            "aws_vpc.Nam-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "Nam-public-subnet-02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:466021236912:subnet/subnet-09882a3a1181a2bba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "af-south-1a",
            "availability_zone_id": "afs1-az1",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09882a3a1181a2bba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "466021236912",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Nam-public-subent-02"
            },
            "tags_all": {
              "Name": "Nam-public-subent-02"
            },
            "vpc_id": "vpc-0b9143e64c0509563"
          },
          "dependencies": [
            "aws_vpc.Nam-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Nam-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:af-south-1:466021236912:vpc/vpc-0b9143e64c0509563",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-060cf6d4c3c967862",
            "default_route_table_id": "rtb-054e77984cbaef3fa",
            "default_security_group_id": "sg-0ca3173aeb7f3a594",
            "dhcp_options_id": "dopt-00be317d1711ff12c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b9143e64c0509563",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-054e77984cbaef3fa",
            "owner_id": "466021236912",
            "tags": {
              "Name": "Nam-vpc"
            },
            "tags_all": {
              "Name": "Nam-vpc"
            }
          }
        }
      ]
    }
  ]
}